third_party/move/move-vm/transactional-tests/tests/trusted_code/call_out_from_trusted.baseline.exp
processed 3 tasks
task 0 lines 1-8:  publish [module 0x9::trusted]
Error: Unable to publish module '0000000000000000000000000000000000000000000000000000000000000009::trusted'. Got VMError: {
    major_status: CALL_TYPE_MISMATCH_ERROR,
    sub_status: None,
    location: 0x9::trusted,
    indices: [(FunctionDefinition, 0)],
    offsets: [(FunctionDefinitionIndex(0), 2)],
}
task 1 lines 10-24:  publish [module 0x99::not_trusted]
Error: error: unknown module `0000000000000000000000000000000000000000000000000000000000000009::trusted`
   ┌─ test:16:5
   │
16 │     call trusted::apply
   │     ^^^^^^^^^^^^^^^^^^^


task 2 lines 26-26:  run --verbose 0x99::not_trusted::call_apply
Error: Function execution failed with VMError: {
    message: Linker Error: Module 0000000000000000000000000000000000000000000000000000000000000099::not_trusted doesn't exist,
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
    exec_state: None,
}
